# Echo_server_client

client/: CMakeLists.txt  client.cbp  client.cpp  client.layout
server/: CMakeLists.txt  error_proccessing.cpp  error_proccessing.h  server.cbp  server.cpp  server.depend  server.layout
